objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Is_Parent_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_Date__c</fullName>
        <label>PR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PR_Number__c</fullName>
        <label>PR Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Campaign_Id__c</fullName>
        <description>The Pardot identifier for the connected campaign record</description>
        <externalId>true</externalId>
        <label>Pardot Campaign Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pi__Pardot_Has_Dependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Pardot has marketing assets using this campaign</description>
        <label>Pardot Has Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Active_Digital_Marketing_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>pi__Pardot_Campaign_Id__c</columns>
        <columns>pi__Pardot_Has_Dependencies__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Digital_Marketing</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Digital Marketing Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Active_Sales_Exhibit_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
            <value>2019 Exhibit Events</value>
        </filters>
        <label>Active Sales Exhibit Campaign</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>X2018_Master_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>PARENT_NAME</columns>
        <columns>Is_Parent_Campaign__c</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Parent_Campaign__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Master Exhibit Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Sr_Vice_President_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Digital_Marketing</fullName>
        <active>true</active>
        <label>Digital Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>KOL_Speaker_Events</fullName>
        <active>true</active>
        <description>GH Speaker events, must be coordinated with Medical Affairs.</description>
        <label>KOL Speaker Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Events</fullName>
        <active>false</active>
        <label>Marketing Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Exhibitor_Events</fullName>
        <active>true</active>
        <description>Events where Sales/Medical Affairs will present relevant Guardant 360 information in efforts to increase adoption of Guardant 360 product.</description>
        <label>Sales Exhibitor Events</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Must_Be_Parent_Campaign</fullName>
        <active>true</active>
        <errorConditionFormula>!Parent.Is_Parent_Campaign__c &amp;&amp; 
!ISBLANK(ParentId)</errorConditionFormula>
        <errorDisplayField>ParentId</errorDisplayField>
        <errorMessage>Can only choose allowable parent campaigns for calendar year, like 2018/2019 KOL for Speaker Events and 2018/2019 Exhibit Campaigns for Exhibit Events.</errorMessage>
    </validationRules>
</CustomObject>